[gd_scene load_steps=6 format=3 uid="uid://csd7itmatmq06"]

[ext_resource type="FontFile" uid="uid://b31uxfpf2sdlb" path="res://assets/fonts/Micro5-Regular.ttf" id="1_font"]
[ext_resource type="Script" uid="uid://cg0fh8r6xotxi" path="res://scripts/ui/main_menu.gd" id="2_script"]
[ext_resource type="Texture2D" uid="uid://dscs5q5qeky2s" path="res://assets/sprites/backgrounds/main-menu.jpg" id="3_bg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_title"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.5)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id="Theme_785oh"]
default_font = ExtResource("1_font")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_script")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_bg")
expand_mode = 1
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -60.0
offset_right = 80.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 7
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_title")
text = "PLACEHOLDER TITLE"
horizontal_alignment = 1

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_785oh")
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 10
text = "New Game"

[node name="LoadGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_785oh")
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 10
text = "Load Game"

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
split_offset = 50
dragging_enabled = false

[node name="CreditsButton" type="Button" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 10
text = "Credits"

[node name="QuitButton" type="Button" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 10
text = "Quit"

[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadGameButton" to="." method="_on_load_pressed"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/CreditsButton" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/QuitButton" to="." method="_on_quit_pressed"]
